--- a/gpio/Makefile
+++ b/gpio/Makefile
@@ -1,5 +1,5 @@
 # Make libs
-all: pins pwm setup timing
+all: pins pwm setup timing threading
 pins: pins.sld
 	cyclone pins.sld
 pwm: pwm.sld
@@ -8,4 +8,5 @@ setup: setup.sld
 	cyclone setup.sld
 timing: timing.sld
 	cyclone timing.sld
-
+threading: threading.sld
+	cyclone threading.sld
